Revert "stopgap for preventing errors about unresolved colors. something with react-spring not liking hsl maybe?"
This reverts commit 1ed57764ad392960d87e09f6d43e09689d2734ab.

--- a/packages/sparx/src/components/Checkbox/Checkbox.module.css
+++ b/packages/sparx/src/components/Checkbox/Checkbox.module.css
@@ -17,7 +17,7 @@
 
 .icon {
   display: block;
-  color: var(--interactive-normal);
+  color: var(--control-foreground);
 }
 
 .label {
